--- a/index.html
+++ b/index.html
@@ -5,16 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Wine Festival Schedule">
     <title>Wine Festival Schedule</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Wine Festival Schedule</h1>
+    <header class="header">
+        <h1>Annual Aguillar Family Wine Festival</h1>
     </header>
     <main>
         <section>
-            <h2>Welcome to the Wine Festival</h2>
-            <p>Stay tuned for the schedule of events.</p>
+            <table class="schedule-table">
+                <thead>
+                    <tr class="table-header">
+                        <td colspan="2">Wine Festival Schedule</td>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr class="table-row1">
+                        <th>Time</th>
+                        <th>Event</th>
+                    </tr>
+                    <tr class="table-row2">
+                        <td>12:00 PM</td>
+                        <td>Welcome Reception</td>
+                    </tr>
+                    <tr class="table-row2">
+                        <td>1:00 PM</td>
+                        <td>Storytelling & Tasting</td>
+                    </tr>
+                    <tr class="table-row2">
+                        <td>2:00 PM</td>
+                        <td>Wine Luncheon</td>
+                    </tr>
+                    <tr class="table-row2">
+                        <td>3:00 PM</td>
+                        <td>Aguillar Family Wines</td>
+                    </tr>
+                    <tr class="table-row2">
+                        <td>4:00 PM</td>
+                        <td>Wine & Cheese Tasting</td>
+                    </tr>
+                </tbody>
+            </table>
         </section>
     </main>
     <footer>
